--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,18 +11,26 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.2.0",
+    "@angular/cdk": "^14.2.0",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.0.0",
+    "@angular/material": "^14.2.0",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.3",
+    "@mui/styled-engine-sc": "^5.10.3",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "bootstrap": "^5.2.0",
     "ngx-toastr": "^15.0.0",
     "react-toastify": "^9.0.8",
     "rxjs": "~7.5.0",
+    "styled-components": "^5.3.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
